# mnredis

./: COPYING  README.md  configure.ac  do-it  setup-env
src/: Makefile.am  diag.txt  gen-diag  mnredis.c  mnredis.h  mnredis_private.h
test/: Makefile.am  gendata  gendata.c  runscripts  testcompleteness.c  testfault.c  testfoo.c  unittest.h
